# legal-buddy

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/legal_chat/: contextualize.py  embedding.py  generation.py  pipeline.py  prompting.py  retrieval.py  structured_models.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/core/: config.py  observability.py
apps/api/tests/: test_traced.py
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/ingestion/: README.md  pyproject.toml
apps/ingestion/src/ingestion/: __init__.py  __main__.py  cases_build.py  cases_build_hybrid.py  cases_chunking.py  cases_hybrid.py  cases_ingest.py  cases_structure.py  pipeline.py
apps/shared/: README.md  pyproject.toml
apps/shared/src/shared/: __init__.py  chunking.py  embedding.py  qdrant.py
apps/web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/chat/stream/: route.ts
apps/web/components/chat/: ChatApp.tsx  Composer.tsx  Header.tsx  Message.tsx  Sidebar.tsx  SourceList.tsx  TestSettings.tsx
apps/web/components/ui/: Logo.tsx  button.tsx
apps/web/lib/: types.ts
docs/: agent_framework_evaluation.md  cases_ingestion_plan.md  cases_phase2_plan.md  cases_retrieval_quality_plan.md  chat_session_memory.md  chunking_and_retrieval.md  deployment.md  situational_rag_plan.md
eval/: README.md  REPORT.md  baseline_chunk.py  cleanup.py  common.py  compare.py  compare3.py  gen_goldset.py  gen_goldset_groq.py  gen_goldset_more.py  goldset.json  ingest_eval.py  metrics_baseline.json  metrics_improved.json  run_eval.py  select_subset.py
eval/data/: subset_acts.json
eval/results/: metrics_baseline.json  metrics_improved.json  metrics_improved512.json  metrics_mle5base512.json
notebooks/: ingest_qdrant.py  qdrant_ingestion.ipynb
