[project]
name = "shared"
version = "0.1.0"
description = "Shared embedding, Qdrant, and chunking primitives for the legal RAG pipeline."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qdrant-client>=1.17.1",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
